<resources>
    <string name="app_name">BreweryApp</string>
    <string name="name_of_pub">Pub</string>
    <string name="city_of_pub">City</string>
    <string name="status_of_pub">Status</string>
    <string name="street_of_pub">Street</string>
    <string name="phone_of_pub">Phone</string>
    <string name="facebook_app_id">145674306095247</string>
    <string name="loading">Loading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
