<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pintIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/pint"/>

    <TextView
        android:id="@+id/detailName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_of_pub"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="22dp"
        />

    <TextView
        android:id="@+id/detailStatus"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/status_of_pub"
        android:textStyle="italic"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/detailStreet"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/street_of_pub" />

    <TextView
        android:id="@+id/detailCity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/city_of_pub" />

    <TextView
        android:id="@+id/detailPhone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/phone_of_pub" />


</LinearLayout>