<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kobevervoort.breweryapp.PubFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/detailFavorite"
            android:layout_width="199dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/searchField"
            android:textStyle="italic"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_of_pub"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/detailStatus"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/status_of_pub"
            android:textStyle="italic"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/detailStreet"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/street_of_pub" />

        <TextView
            android:id="@+id/detailCity"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/city_of_pub" />

        <TextView
            android:id="@+id/detailPhone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/phone_of_pub" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/searchField"
            android:textColor="@color/colorPrimaryWhite"
            android:padding="10dp"
            android:text="Favorite"
            android:id="@+id/buttonFavorite"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonFavorite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/searchField"
            android:textColor="@color/colorPrimaryWhite"
            android:padding="10dp"
            android:text="Unfavorite"
            android:id="@+id/buttonUnfavorite"/>

    </LinearLayout>

</FrameLayout>
